# astro_studio

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  date-range-preview.html  index.html  package-lock.json  package.json  start.sh  tsconfig.json  vite.config.ts
.github/workflows/: build-desktop.yml
.obsidian/: app.json
.playwright-cli/: page-2026-05-08T02-08-54-612Z.yml  page-2026-05-08T02-12-35-055Z.yml  page-2026-05-08T02-13-07-236Z.yml  page-2026-05-08T02-14-54-410Z.yml  page-2026-05-08T02-21-42-131Z.yml  page-2026-05-08T02-30-20-900Z.yml  page-2026-05-08T02-30-39-659Z.yml  page-2026-05-08T02-36-03-276Z.yml  page-2026-05-08T02-40-48-564Z.yml  page-2026-05-08T02-45-17-978Z.yml
design-proposals/: index.html  proposal-a-card-dashboard.html  proposal-b-split-panel.html  proposal-c-visual-mosaic.html  proposal-d-compact-table.html
doc/: README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md
scripts/: build-macos-source.sh  build-macos-source.test.ts  release-build-config.test.ts  start-macos-source.sh  start-macos-source.test.ts  start.sh  transform_errors.py
src/: App.tsx  i18n.test.ts  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_gateway.rs  config.rs  db.rs  error.rs  file_manager.rs  gallery.rs  generation_job_execution.rs  generation_job_execution_tests.rs  generation_job_worker.rs  generation_job_worker_deps.rs  generation_job_worker_deps_tests.rs  generation_job_worker_tests.rs  generation_jobs.rs  generation_jobs_tests.rs  generation_lifecycle.rs  generation_worker_lease.rs  lib.rs  main.rs  model_registry.rs  models.rs  runtime_logs.rs  updater.rs
src-tauri/src/commands/: canvas.rs  conversations.rs  generation.rs  llm.rs  logs.rs  mod.rs  projects.rs  prompt_agent.rs  prompts.rs  settings.rs
src-tauri/src/image_engines/: gemini.rs  mod.rs  openai.rs
src-tauri/src/llm/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/prompt_agent/: mod.rs  runner.rs  skills.rs  tools.rs  types.rs
src/hooks/: useFavoriteFolders.ts  useFolders.ts  useInfiniteScroll.ts  usePromptFolders.ts  useResizable.ts  useStoredGalleryViewMode.ts  useTheme.ts
src/lib/: api.test.ts  api.ts  dateRangeFilters.ts  dayPickerLocale.test.ts  dayPickerLocale.ts  store.ts  (+32 more)
wiki/: overview.md
(+159 files in other folders)
