[package]
name = "astro-studio"
version = "0.0.6"
description = "Astro Studio - AI Image Generation Desktop Client"
authors = ["Astro Studio"]
edition = "2021"

[lib]
name = "astro_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
arboard = "3"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
